--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@
     position: fixed;
     top:0;
 }
+
+@media (max-width: 650px) {
+    body{
+     margin-top: 15px;
+     width: 100%;
+     position: relative;
+ } 
+   }
